# subscribe_bot

./: .flake8  .gitignore  Dockerfile  Makefile  docker-compose-dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  whitelist.txt
docs/: ТЗ.md
src/: config.py
src/domain/common/dto/: base.py
src/domain/common/events/: base.py  dispatcher.py  middleware.py  observer.py
src/domain/payment/: constants.py
src/domain/payment/dto/: __init__.py  payment.py
src/domain/payment/interfaces/: __init__.py  persistence.py  uow.py
src/domain/payment/models/: __init__.py  payment.py
src/domain/payment/use_cases/: subscription.py
src/domain/renewal_type/dto/: __init__.py  renewal_type.py
src/domain/renewal_type/interfaces/: __init__.py  persistence.py  uow.py
src/domain/renewal_type/models/: __init__.py  renewal_type.py
src/domain/renewal_type/use_cases/: renewal_type.py
src/domain/subscription/dto/: __init__.py  subscription.py
src/domain/subscription/interfaces/: __init__.py  persistence.py  uow.py
src/domain/subscription/use_cases/: subscription.py
src/domain/subscription_renewal/dto/: __init__.py  subscription_renewal.py  user.py
src/domain/subscription_renewal/events/: __init__.py  subscribe_record.py
src/domain/subscription_renewal/interfaces/: __init__.py  persistence.py  uow.py
src/domain/subscription_renewal/use_cases/: subscription_renewal.py
src/domain/user/: exceptions.py
src/domain/user/dto/: __init__.py  (+1 more)
src/infrastructure/database/: db.py  uow.py
src/infrastructure/payment/: endpoints.py  uow.py
typings/: fluentogram_stubs.pyi
(+17 files in other folders)
